<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_item_profile" />
        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_menu_track"
            android:title="@string/menu_item_track" />
        <item
            android:id="@+id/nav_your_orders"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_item_history" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_item_feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_item_about" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_item_share" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign"
            android:title="@string/menu_item_sign" />
    </group>
</menu>