<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.MADLab.www.Eatio.ConfirmOrderPayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/payment_promo_code_text"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp">

            <EditText
                android:id="@+id/payment_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_promo_code_edit_text"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:padding="8dp"
            android:text="@string/payment_method_text"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/payment_cod_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="8dp"
                android:text="@string/payment_type_cod_radio"
                android:textSize="16sp" />

            <!--<RadioButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/payment_type_paytm_radio"-->
            <!--android:textSize="16sp" />-->
        </RadioGroup>

        <Button
            android:id="@+id/order_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorGold"
            android:text="@string/pay_now_button" />
    </LinearLayout>

</FrameLayout>
