<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_select"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.MADLab.www.Eatio.UserTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:onClick="onLoginButton"
            android:text="@string/login_user_button"
            android:textColor="@color/colorGold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:onClick="onGuestButton"
            android:text="@string/Guest_user_button"
            android:textColor="@color/colorGold" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#00000000"
        android:onClick="onSignUpButton"
        android:text="@string/sign_up_button"
        android:textColor="@color/colorGold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_up_button"
        android:gravity="center"
        android:text="@string/text_not_registered"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />
</RelativeLayout>
