<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_about"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.hungrooz.www.hungrooz.AboutFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/about_hungrooz"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white_overlay"
            android:onClick="onDeveloperClick"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/developer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/developer_title"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/developer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/developer_name"
                android:textColor="@color/colorGold"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>