<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_select"
    tools:context="com.hungrooz.www.hungrooz.MenuStoreTypeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_overlay"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/menu_store_select"
        android:textColor="@color/colorGold"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp">

        <Button
            android:id="@+id/jltt_store_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:onClick="onJLTTStoreButton"
            android:text="@string/menu_store_jltt"
            android:textColor="@color/colorGold"
            android:textSize="18sp" />

        <Button
            android:id="@+id/food_adda_store_button"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:onClick="onFoodAddaStoreButton"
            android:text="@string/menu_store_food_adda"
            android:textColor="@color/colorGold"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>